unpackaged/objects/wb_Individual__c.object
<CustomObject>
    <description>WellBe Personal Information for Individual and his Family</description>
    <fields>
        <fullName>AC_Information__c</fullName>
        <label>AC用顧客情報</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AffiliationDistrict__c</fullName>
        <formula>TEXT(WorkingCompany__r.ShozokuArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所属地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChronicDisease__c</fullName>
        <label>持病</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>苦情区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>なし</fullName>
                </value>
                <value>
                    <fullName>少ない</fullName>
                </value>
                <value>
                    <fullName>やや多い</fullName>
                </value>
                <value>
                    <fullName>多い</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryCallingCodes__c</fullName>
        <label>国際電話国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentMemberNo__c</fullName>
        <label>現メンバー番号</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FamilyNo__c</fullName>
        <label>家族番号</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyRelationship__c</fullName>
        <label>家族関係</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>長男</fullName>
                </value>
                <value>
                    <fullName>次男</fullName>
                </value>
                <value>
                    <fullName>長女</fullName>
                </value>
                <value>
                    <fullName>次女</fullName>
                </value>
                <value>
                    <fullName>三女</fullName>
                </value>
                <value>
                    <fullName>三男</fullName>
                </value>
                <value>
                    <fullName>会員本人</fullName>
                </value>
                <value>
                    <fullName>兄弟</fullName>
                </value>
                <value>
                    <fullName>四女</fullName>
                </value>
                <value>
                    <fullName>四男</fullName>
                </value>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妹</fullName>
                </value>
                <value>
                    <fullName>孫</fullName>
                </value>
                <value>
                    <fullName>弟</fullName>
                </value>
                <value>
                    <fullName>従妹</fullName>
                </value>
                <value>
                    <fullName>母</fullName>
                </value>
                <value>
                    <fullName>父</fullName>
                </value>
                <value>
                    <fullName>甥</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
                <value>
                    <fullName>義妹</fullName>
                </value>
                <value>
                    <fullName>義母</fullName>
                </value>
                <value>
                    <fullName>義父</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstNameKana__c</fullName>
        <label>名（カナ）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstNameRoma__c</fullName>
        <label>名（ローマ字）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCheckSystemNo__c</fullName>
        <externalId>true</externalId>
        <label>健診システム番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>TEXT(WorkingCompany__r.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>管轄地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastNameKana__c</fullName>
        <label>姓（カナ）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastNameRoma__c</fullName>
        <label>姓（ローマ字）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>メール配信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員</label>
        <referenceTo>wb_Member__c</referenceTo>
        <relationshipLabel>個人</relationshipLabel>
        <relationshipName>IndividualMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MembershipEndDate__c</fullName>
        <label>会員終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipStartDate__c</fullName>
        <label>会員開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>携帯TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>旧ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親</label>
        <referenceTo>wb_Individual__c</referenceTo>
        <relationshipLabel>家族</relationshipLabel>
        <relationshipName>FamilyMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>役職</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WorkingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>勤務会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>雇員</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>f_Classification__c</fullName>
        <formula>If(ISBLANK(Parent__c),
Member__r.f_Classification__c,
If(ISBLANK(Parent__r.Member__r.f_Classification__c),
&apos;&apos;,
Parent__r.Member__r.f_Classification__c + &apos;家族&apos;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompany__c</fullName>
        <formula>Member__r.f_ContractCompany__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCountry__c</fullName>
        <formula>Member__r.f_ContractCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約国</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_MDContractNo__c</fullName>
        <formula>If(ISBLANK(Parent__c),
Member__r.MembershipDetail__r.Membership__r.Name,
If(ISBLANK(Parent__r.Member__c),
&apos;&apos;,
Parent__r.Member__r.MembershipDetail__r.Membership__r.Name
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_MemberNo_c__c</fullName>
        <formula>If(ISBLANK(Parent__c),
Member__r.f_MemberNo__c,
If(ISBLANK(Parent__r.Member__c),
&apos;&apos;,
LEFT(Parent__r.Member__r.f_MemberNo__c,LEN(Parent__r.Member__r.f_MemberNo__c)-1) +FamilyNo__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員番号</label>
        <type>Text</type>
    </fields>
    <label>個人</label>
    <listViews>
        <fullName>All</fullName>
        <columns>f_MemberNo_c__c</columns>
        <columns>NAME</columns>
        <columns>FamilyRelationship__c</columns>
        <columns>Jurisdiction__c</columns>
        <columns>AffiliationDistrict__c</columns>
        <columns>WorkingCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>氏名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>